--- a/assets/images/GR_Privacy policy.HTML
+++ b/assets/images/GR_Privacy policy.HTML
@@ -298,7 +298,7 @@
           <p>Packaging Depot store Technovations Private Limted,</p>
           <p>401, Canopus Mall, Ghod Dod Road,</p>
           <p>Near Parle Point, Surat, Gujarat - 395001</p>
-          <p><a href="mailto:coo@Packagingdepotstore.com" style="text-decoration: none; color: black;">coo@PackagingDepotstore.com</a></p>
+          <p><a href="mailto:info@inpackaging.com" style="text-decoration: none; color: black;">info@inpackaging.com</a></p>
           <p>+91 96199 94621</p>
       </li>
   </ol>
